Kind of solved the issue with the vertical alignment of the second top navigation bar text.

--- a/src/main/webapp/css/secondtopnav.css
+++ b/src/main/webapp/css/secondtopnav.css
@@ -29,8 +29,8 @@ html, body {
 
 .topnav-ul a {
 
+	padding: 5% 0;
 	display: block;
-	align-self: center;
 	color: white;
 	text-align: center;
 	text-decoration: none;
